# rust-course

./: 1.rs  COURSE.md  Cargo.toml  README.md
exercises/: book.toml
exercises/A2/: exercise.md
exercises/G/4-pyo3/: README.md
exercises/book/: SUMMARY.md
exercises/book/0-install/: mod.md
exercises/book/A1-language-basics/: mod.md
exercises/book/A2: Rust Echo System/: exercise.mod
exercises/book/A3-advanced-intro/: mod.md
exercises/book/A4-traits-generics/: mod.md
exercises/book/B-application-programming/: mod.md
exercises/book/C-concurrency-parallelism/: mod.md
exercises/book/D-trait-objects-patterns/: mod.md
exercises/book/E-async-web/: mod.md
exercises/book/F-safe-unsafe/: mod.md
exercises/book/G-ffi/: mod.md
exercises/book/P-final-project/: mod.md
slides/: .gitignore  0-intro.md  A1-intro-to-rust.md  A2-advanced-intro.md  C-concurrency-parallelism.md  format-lecture.md
